# zach-edgar

./: .env.local  .env.template  .gitignore  CLAUDE.md  CODE.md  CODE_GOVERNANCE.md  CONSTRAINT_ENFORCER_IMPLEMENTATION.md  DATA_SOURCES.md  DEVELOPER.md  EXAMPLE_PARSER_IMPLEMENTATION.md  FEASIBILITY_ANALYSIS.md  INITIALIZATION_COMPLETE.md  Makefile  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  QUICKSTART_SETUP.md  README.md  README_BINARY.md  SECURITY.md  SELF_IMPROVING_CODE_PATTERN.md  SETUP_COMMAND_IMPLEMENTATION.md  SETUP_COMMAND_SUMMARY.md  SETUP_DEMO.md  SETUP_QUICK_START.md  STRUCTURE.md  WEATHER_API_GENERATION_IMPLEMENTATION.md  create_deployment_package.py  edgar-analyzer  edgar_cli.sh  pyproject.toml  requirements.txt  run_top_100_enhanced.py  setup_edgar_cli.py  test_50_companies.py  test_centralized_openrouter.py  test_cli_chatbot.py  test_cli_with_fallback.py  test_constraint_enforcer_demo.py  test_edgar_api.py  test_llm_direct.py  (+7 more)
.claude-mpm/: configuration.yaml
.claude-mpm/config/: project.json
.claude-mpm/memories/: agentic-coder-optimizer_memories.md
.claude/agents/: .dependency_cache  .mpm_deployment_state  agentic-coder-optimizer.md  dart_engineer.md  data_engineer.md  engineer.md  golang_engineer.md  java_engineer.md  nextjs_engineer.md  project_organizer.md  react_engineer.md  research.md  ruby-engineer.md  security.md  ticketing.md  typescript_engineer.md  version_control.md  web_ui.md
data/cache/: submissions_0000007084.json  submissions_0000018230.json  submissions_0000027419.json  submissions_0000034088.json  submissions_0000037996.json  submissions_0000040545.json  submissions_0000049071.json  submissions_0000051143.json  submissions_0000056873.json  submissions_0000060667.json  submissions_0000064803.json  submissions_0000066740.json  submissions_0000070858.json  submissions_0000072971.json  submissions_0000080424.json  submissions_0000093410.json  submissions_0000200406.json  submissions_0000310522.json  submissions_0000320193.json  submissions_0000354950.json  submissions_0000701221.json  submissions_0000721371.json  submissions_0000731766.json  submissions_0000732712.json  submissions_0000732717.json  submissions_0000789019.json  submissions_0000909832.json  submissions_0000927653.json  submissions_0000936468.json  submissions_0001018724.json  submissions_0001035002.json  submissions_0001048911.json  submissions_0001067983.json  (+15 more)
docs/: CONSTRAINT_ENFORCEMENT.md  CONSTRAINT_ENFORCER_QUICK_REF.md  Corporations Pay Their Executives More Than They Pay In Taxes.xlsx  DATA_DICTIONARY.md  EXAMPLE_PARSER.md  EXECUTIVE_COMPENSATION_ACTION_PLAN.md  EXECUTIVE_COMPENSATION_DATA_SOURCES.md  METHODOLOGY_AND_DATA_SOURCES.md  PHASE_2_ARCHITECTURE.md  PHASE_2_RISKS_AND_MITIGATION.md  PHASE_2_WORK_BREAKDOWN.md  PROJECT_CONFIG_IMPLEMENTATION.md  PROJECT_CONFIG_SCHEMA.md  README.md  README_DOCUMENTATION.md  RESEARCH_BREAKTHROUGH_SUMMARY.md  SONNET45_INTEGRATION.md  USER_GUIDE_DATA_INTERPRETATION.md  mvp_assessment.md
edgar-analyzer-package/: .gitignore  QUICK_START.md  README.md  edgar-analyzer.bat  requirements.txt
examples/: data_sources_demo.py  example_parser_demo.py  weather_api_prompt.md
output/: checkpoint_analysis_2023_fortune5.json  checkpoint_analysis_2023_fortune5.xlsx  quality_test_2023.json  quality_test_2023.xlsx
results/: top_100_enhanced_results_20251121_155159.json
scripts/: create_employee_roster.py  generate_weather_extractor.py  validate_employee_roster_poc.py
templates/: project.yaml.template  weather_api_project.yaml
tests/: README.md  analyze_fixed_fortune_100.py  debug_proxy_content.py  demo_setup_command.py  edgar_analyzer_prototype.py  fix_fortune_1_8.py  run_fast_qa_cleanup.py  run_top_100_enhanced.py  test_invoice_poc.py  test_multi_source_enhanced_service.py  test_real_compensation_apis.py  test_setup_integration.py
(+139 files in other folders)
