[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edgar-analyzer"
version = "0.1.0"
description = "SEC EDGAR Executive Compensation vs Tax Expense Analysis Tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Edgar Analyzer Team", email = "team@example.com"}
]
keywords = ["sec", "edgar", "executive-compensation", "tax-analysis", "financial-data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "dependency-injector>=4.41.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "httpx>=0.24.0",
    "tiktoken>=0.5.0",
    "jinja2>=3.1.0",  # Code generation templates
    "pyyaml>=6.0.0",  # Project configuration
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "reportlab>=4.0.0",
]

[project.scripts]
edgar-analyzer = "edgar_analyzer.main_cli:main"
extract-transform = "extract_transform_platform.cli.commands:cli"

[project.urls]
Homepage = "https://github.com/example/edgar-analyzer"
Repository = "https://github.com/example/edgar-analyzer"
Documentation = "https://edgar-analyzer.readthedocs.io"
"Bug Tracker" = "https://github.com/example/edgar-analyzer/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["edgar_analyzer*", "extract_transform_platform*", "cli_chatbot*", "self_improving_code*"]

[tool.setuptools.package-data]
edgar_analyzer = ["config/*.yaml", "data/*.json"]
extract_transform_platform = ["templates/*.j2"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["edgar_analyzer", "extract_transform_platform", "cli_chatbot", "self_improving_code"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "dependency_injector.*",
    "structlog.*",
    "rich.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/edgar_analyzer",
    "--cov=src/extract_transform_platform",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that make external API calls",
    "platform: Extract & transform platform tests",
]